@@ -6,6 +6,7 @@
 v0.10.2 (??.07.2011) (not released)
  * SimpleMarker: Default constructor with options array 
  * SimpleMarker: it is possible to add dynamic parameters by PHP code.
+ * SimpleMarker: check existence of configured links
  * ListBuilder: SubpartMarker respects english orthography. ###COMPANIES### -> ###COMPANY###
  * It is optional possible to load hidden objects if BE user is logged in. This works mainly for detail pages of plugins.
  * New class for default single view
